trying to make basic CRUD functions work. complete snafu

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,5 @@
-<h1>Welcome to CityFix</h1>
+<h4>Have a problem?</h4>
+<h2>Tell us where. We're on it.</h2>
+
+<a class="btn btn-success" href="/signup">I am a Citizen</a>
+<a class="btn btn-warning" href="/signup">I am a City Admin</a>
