--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,5 @@
 <footer>
   <div class="container">
-    <p>&copy; 2016 Company, Inc.</p>
+    <p>&copy CityFix</p>
   </div>
 </footer>
-
-<%# Add footer code later to beautify it %>
