--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
       <ul class="nav navbar-nav navbar-left">
-        <li><a href="/animals">View all Issues</a></li>
+        <li><a href="/issues">View all Issues</a></li>
 
     <% if (isAuthenticated) { %>
 
