--- a/views/partials/signupForm.ejs
+++ b/views/partials/signupForm.ejs
@@ -1,15 +1,22 @@
 <form method="post" action="<%= formUrl %>">
   <div class="row">
     <div class="form-group col-md-4">
+      <input type="text" class="form-control" name="firstName" id="firstName" placeholder="First Name">
+    </div>
+    <div class="form-group col-md-4">
+      <input type="text" class="form-control" name="lastName" id="lastName" placeholder="Last Name">
+    </div>
+    <div class="form-group col-md-4">
       <input type="email" class="form-control" name="email" id="email" placeholder="Email Address">
     </div>
     <div class="form-group col-md-4">
       <input type="password" class="form-control" name="password" id="password" placeholder="Password">
     </div>
     <div class="form-group col-md-4">
+      <input type="text" class="form-control" name="adminKey" id="adminKey" placeholder="Admin Key">
+    </div>
+    <div class="form-group col-md-4">
       <button type="submit" class="btn btn-primary btn-block">Submit</button>
     </div>
   </div>
 </form>
-
-<%# Edit login form later %>
