--- a/views/issues/new.ejs
+++ b/views/issues/new.ejs
@@ -1,23 +1,19 @@
-<% console.log('new.ejs appears')%>
-<h1>New.ejs: Add new issue request</h1>
+<h1>Add new issue request</h1>
 
-<%# FIRST PART: THE FORM %>
 <form method="post" action="/issues">
+  <h2>What request do you have today?</h2>
   <div class="row">
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-6">
       <input type="text" class="form-control" name="issues[title]" id="title" placeholder="Title">
     </div>
-    <div class="form-group col-md-2">
-      <input type="text" class="form-control" name="issues[nearestBlockNum]" id="nearestBlockNum" placeholder="Nearest Block">
-    </div>
     <div class="form-group col-md-6">
-      <input type="text" class="form-control" name="issues[street]" id="street" placeholder="Street Name">
+      <input type="text" class="form-control" name="issues[address]" id="address" placeholder="Address (Block and Street)">
     </div>
     <div class="form-group col-md-12">
-      <input type="text" class="form-control" name="issues[problem]" id="problem" placeholder="Problem">
+      <input type="text" class="form-control" name="issues[problem]" id="problem" placeholder="Describe your problem">
     </div>
     <div class="form-group col-md-12">
-      <button type="submit" class="btn btn-warning btn-block">Submit Issue</button>
+      <button type="submit" class="btn btn-success btn-block">Add issue</button>
     </div>
   </div>
 </form>
