--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -2,4 +2,4 @@
 
 <% include ../partials/flash %>
 
-<%- include('../partials/authForm', {formUrl: '/signup'}) %>
+<%- include('../partials/signupForm', {formUrl: '/signup'}) %>
