created about page, user profile pages, and simple CSS navbar and icon tweaks

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,9 @@
-<h4>Have a problem?</h4>
-<h2>Tell us where. We're on it.</h2>
+<div class="jumbotron">
+  <div class="container">
+    <h4>Have a problem?</h4>
+    <h1>Tell us where. We're on it.</h1>
 
-<a class="btn btn-success" href="/signup">I am a Citizen</a>
-<a class="btn btn-warning" href="/signup">I am a City Admin</a>
+    <a class="btn btn-success btn-lg" href="/signup">I am a Citizen</a>
+    <a class="btn btn-warning btn-lg" href="/signup">I am a City Admin</a>
+  </div>
+</div>
