--- a/views/issues/new.ejs
+++ b/views/issues/new.ejs
@@ -13,7 +13,8 @@
       <input type="text" class="form-control" name="issues[problem]" id="problem" placeholder="Describe your problem">
     </div>
     <div class="form-group col-md-12">
-      <button type="submit" class="btn btn-success btn-block">Add issue</button>
+      <button type="submit" class="btn btn-success btn-block">
+        <span class="glyphicon glyphicon-save"></span> Add issue</button>
     </div>
   </div>
 </form>
