--- a/views/partials/authForm.ejs
+++ b/views/partials/authForm.ejs
@@ -7,7 +7,7 @@
       <input type="password" class="form-control" name="password" id="password" placeholder="Password">
     </div>
     <div class="form-group col-md-12">
-      <button type="submit" class="btn btn-primary btn-block">Submit</button>
+      <button type="submit" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-log-in"></span> Log In</button>
     </div>
   </div>
 </form>
