--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,27 +8,28 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">CityFix</a>
+      <a class="navbar-brand" href="/"><b><span class="glyphicon glyphicon-ok-circle"></span> CityFix</b></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
+      <div class="col-md-5">
       <ul class="nav navbar-nav navbar-left">
-        <li><a href="/issues">View all Issues</a></li>
-
+        <li><a href="/about"><span class="glyphicon glyphicon-info-sign "></span> About</a></li>
+        <li><a href="/issues"><span class="glyphicon glyphicon-eye-open"></span> View All Issues</a></li>
+      </div>
     <% if (isAuthenticated) { %>
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"><%= user.local.email %></a></li>
-          <li><a href="/logout">Logout</a></li>
+          <li><a href="/users/<%=user.id%>"><span class="glyphicon glyphicon-user"></span> <%= user.local.firstName %> <%= user.local.lastName %></a></li>
+          <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </ul>
 
       <%} else {%>
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/login">Login</a></li>
-          <li><a href="/signup">Register now</a></li>
+          <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span>  Login</a></li>
+          <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Register as New User</a></li>
         </ul>
 
     <% } %>
