--- a/views/partials/signupForm.ejs
+++ b/views/partials/signupForm.ejs
@@ -13,7 +13,7 @@
       <input type="password" class="form-control" name="password" id="password" placeholder="Password">
     </div>
     <div class="form-group col-md-12">
-      <button type="submit" class="btn btn-primary btn-block">Submit</button>
+      <button type="submit" class="btn btn-success btn-block"><span class="glyphicon glyphicon-save"></span> Register</button>
     </div>
   </div>
 </form>
